--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -7,19 +7,19 @@
         <item
             android:id="@+id/home"
             android:checked="false"
-            android:icon="@drawable/ic_drawer"
+            android:icon="@drawable/ic_home_black_24dp"
             android:title="@string/home_string" />
 
         <item
             android:id="@+id/account"
             android:checked="false"
-            android:icon="@drawable/ic_drawer"
+            android:icon="@drawable/ic_account_box_black_24dp"
             android:title="@string/account_string" />
 
         <item
             android:id="@+id/friends"
             android:checked="false"
-            android:icon="@drawable/ic_drawer"
+            android:icon="@drawable/ic_people_black_24dp"
             android:title="@string/friends_string" />
 
     </group>
