--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -7,4 +7,9 @@
         app:showAsAction="collapseActionView|ifRoom"
         app:actionViewClass="android.support.v7.widget.SearchView" />
 
+    <item android:id="@+id/action_sort"
+        android:title="@string/sort"
+        android:icon="@drawable/ic_filter_list_24dp"
+        app:showAsAction="ifRoom" />
+
 </menu>
