Larger inputs on add restaurant

--- a/app/src/main/res/layout/activity_selector.xml
+++ b/app/src/main/res/layout/activity_selector.xml
@@ -60,7 +60,7 @@
             android:layout_marginRight="36dp"
             android:layout_centerVertical="true"
             android:text="@string/use_input"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="#ffffff" />
 
     </android.support.percent.PercentRelativeLayout>
