--- a/app/src/main/res/layout/add_restaurant.xml
+++ b/app/src/main/res/layout/add_restaurant.xml
@@ -61,7 +61,7 @@
             android:name="com.google.android.gms.maps.SupportMapFragment"
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            tools:context=".MainActivity" />
+            tools:context=".AddRestaurantActivity" />
 
         <LinearLayout
             android:layout_width="match_parent"
