--- a/app/src/main/res/layout/activity_selector.xml
+++ b/app/src/main/res/layout/activity_selector.xml
@@ -34,6 +34,7 @@
             app:layout_widthPercent="20%"
             android:layout_marginLeft="36dp"
             android:src="@drawable/ic_camera_24dp"
+            android:tint="#ffffff"
              />
 
     </android.support.percent.PercentRelativeLayout>
