--- a/app/src/main/res/layout/add_restaurant.xml
+++ b/app/src/main/res/layout/add_restaurant.xml
@@ -182,12 +182,13 @@
                 android:layout_height="wrap_content"
                 android:scaleX="0.6"
                 android:scaleY="0.6"
-                android:layout_gravity="center"
                 android:numStars="5"
                 android:layout_marginTop="5dp"
-                android:stepSize="1"/>
-                android:layout_toEndOf="@+id/imageView6"
-                android:layout_centerInParent="true" />
+                android:stepSize="1"
+                android:progressTint="@color/colorAccent"
+                android:secondaryProgressTint="@android:color/transparent"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center_vertical"/>
 
         </RelativeLayout>
 
