Change splash screen + color icon toolbar

--- a/app/src/main/res/drawable/splash_screen.xml
+++ b/app/src/main/res/drawable/splash_screen.xml
@@ -2,13 +2,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@color/colorAccent"/>
+        android:drawable="@color/white"/>
 
     <item>
-        <!--TODO Use vector instead-->
         <bitmap
             android:gravity="center"
-            android:src="@mipmap/ic_launcher"/>
+            android:src="@drawable/screen" />
     </item>
 
 </layer-list>
