--- a/app/src/main/res/menu/options_menu.xml
+++ b/app/src/main/res/menu/options_menu.xml
@@ -5,11 +5,13 @@
         android:title="@string/search"
         android:icon="@drawable/ic_search_24dp"
         app:showAsAction="collapseActionView|ifRoom"
-        app:actionViewClass="android.support.v7.widget.SearchView" />
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
 
     <item android:id="@+id/action_sort"
         android:title="@string/sort"
         android:icon="@drawable/ic_filter_list_24dp"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="ifRoom"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
 
 </menu>
