--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,17 +41,21 @@
                     android:layout_height="match_parent"
                     tools:context=".MainActivity" />
 
+
+                <include layout="@layout/bottom_sheet"
+                    android:id="@+id/bottom_sheet"/>
+
                 <android.support.design.widget.FloatingActionButton
                     android:id="@+id/fab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
                     android:layout_gravity="bottom|right"
                     android:layout_marginRight="@dimen/activity_horizontal_margin"
                     android:layout_marginBottom="@dimen/activity_vertical_margin"
                     android:src="@drawable/ic_add_24dp"
                     android:tint="#ffffff" />
+
+
             </android.support.design.widget.CoordinatorLayout>
 
         </LinearLayout>
